test/errors/branch-plus.asm
.inesprg 1
.ineschr 0
.inesmap 0
.inesmir 0

.prg 0
.org $C000
    BEQ test

.org $C082
test:
